update perbaikan kode error

--- a/style.css
+++ b/style.css
@@ -787,6 +787,9 @@ body.dark .element-info {
   overflow-x: scroll;
   margin-top: 1rem;
 }
+#kategori-table {
+  overflow-x: scroll;
+}
 
 /* Gaya dasar alert (bisa Anda sesuaikan) */
 .alert {
